pkg/envoy/configdump/testdata/minimal_listeners.json
{
  "configs": [
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
      "static_listeners": [
        {
          "listener": {
            "name": "test-listener",
            "address": {
              "socket_address": {
                "address": "0.0.0.0",
                "port_value": 8080
              }
            },
            "filter_chains": [
              {
                "filters": [
                  {
                    "name": "envoy.filters.network.http_connection_manager"
                  }
                ]
              }
            ]
          }
        }
      ],
      "dynamic_listeners": [
        {
          "active_state": {
            "listener": {
              "name": "dynamic-listener",
              "address": {
                "socket_address": {
                  "address": "0.0.0.0", 
                  "port_value": 9090
                }
              }
            }
          }
        }
      ]
    }
  ]
}
